--- a/node-deployment.yaml
+++ b/node-deployment.yaml
@@ -1,37 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodeapp-deployment
-  labels:
-     app: nodeapp
-     type: front-end
+  name: mydeployment
 spec:
-  template:
-     metadata:
-       name: nodejsapp-pod
-       labels: 
-         app: nodejsapp
-         type: front-end
-     spec:
-         containers:
-           - name: nodejsapp-erp
-             image: "pankajpatre11/erp:1.0"
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      type: front-end
-
+      app: angular-app
+  template:
+    metadata:
+      labels:
+        app: angular-app
+    spec:
+      containers:
+      - name: my-angular-app
+        image: pankajpatre11/mywebapp:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8085
+# service type loadbalancer
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-service
+  name: angular-app-svc
 spec:
   selector:
-    app: nodejsapp
-  type: LoadBalancer  
+    app: angular-app
   ports:
     - protocol: TCP
-      targetPort: 3000
-      port: 80
-      nodePort: 30000
+      port: 8085
+      targetPort: 8085
+  type: LoadBalancer
