--- a/MyAwesomeApp/Jenkinsfile
+++ b/MyAwesomeApp/Jenkinsfile
@@ -11,7 +11,7 @@ node {
     
     
     stage ('Build') {
-            sh 'mvn -f MyAwesomeApp/pom.xml clean install'            
+            sh 'mvn clean install'            
         }
         
     stage ('archive') {
@@ -22,8 +22,8 @@ node {
          // Build and push image with Jenkins' docker-plugin
         withDockerServer([uri: "tcp://localhost:4243"]) {
 
-            withDockerRegistry([credentialsId: "fa32f95a-2d3e-4c7b-8f34-11bcc0191d70", url: "https://index.docker.io/v1/"]) {
-            image = docker.build("ananthkannan/mywebapp", "MyAwesomeApp")
+            withDockerRegistry([credentialsId: "dockerhub", url: "https://index.docker.io/v1/"]) {
+            image = docker.build("pankajpatre/mywebapp", "MyAwesomeApp")
             image.push()
             
             }
