--- a/MyAwesomeApp/Jenkinsfile
+++ b/MyAwesomeApp/Jenkinsfile
@@ -20,9 +20,9 @@ node {
         
     stage ('Docker Build') {
          // Build and push image with Jenkins' docker-plugin
-        withDockerServer([uri: "tcp://localhost:4243"]) {
+        withDockerServer([uri: "tcp://35.172.201.214:8083"]) {
 
-            withDockerRegistry([credentialsId: "dockerhub", url: "https://index.docker.io/v1/"]) {
+            withDockerRegistry([credentialsId: "dockerhub", url: "http://35.172.201.214:8083/"]) {
             image = docker.build("pankajpatre/mywebapp", "MyAwesomeApp")
             image.push()
             
