--- a/MyAwesomeApp/Jenkinsfile
+++ b/MyAwesomeApp/Jenkinsfile
@@ -1,6 +1,13 @@
 
 node {
   
+    environment {
+    imageName = "myapp"
+    registryCredentials = "nexusid1"
+    registry = "35.172.201.214:8083"
+    dockerImage = ''
+  }
+  
   def image
   def mvnHome = tool 'maven3'
 
@@ -18,27 +25,21 @@ node {
             archiveArtifacts '**/*.jar'
         }
         
-    stage ('Docker Build') {
-         // Build and push image with Jenkins' docker-plugin
-        withDockerServer([uri: "tcp://35.172.201.214:8083"]) {
-
-            withDockerRegistry([credentialsId: "dockerhub", url: "http://35.172.201.214:8083/"]) {
-            image = docker.build("pankajpatre/mywebapp", "MyAwesomeApp")
-            image.push()
-            
-            }
+    stage('Build Docker image') {
+      steps {
+        script {
+          dockerImage = docker.build(imageName)
         }
+      }
     }
-    
-       stage('docker stop container') {
-            sh 'docker ps -f name=myContainer -q | xargs --no-run-if-empty docker container stop'
-            sh 'docker container ls -a -fname=myContainer -q | xargs -r docker container rm'
-
-       }
-
-    stage ('Docker run') {
-
-        image.run("-p 8085:8085 --rm --name myContainer")
-
+    stage('Upload Docker image into Repo') {
+      steps {
+        script {
+          docker.withRegistry('http://' + registry, registryCredentials) {
+            dockerImage.push("latest")
+          }
+        }
+      }
     }
+
 }
